Add comment functionality
Able to post a comment on a question and delete it

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -8,6 +8,6 @@
         <%= form.text_area :body %>
     </p>
     <p>
-        <%= form.submit %>
+        <%= form.submit :Submit %>
     </p>
 <% end %>
