--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Question Answering Forum</h1>
-<% @questions.each do |question| %>
-    <h3><%= question.title %></h3>
-    <h3><%= question.body %></h3>
-<% end %>
+ <% @questions.each do |question| %>
+     <div class="A question">
+     <h3><%= question.title %></h3>
+     <p><%= question.body %></p>
+     <%= link_to "Read More" , question_path(question),:class => 'btn btn-default' %>
+     </div>
+ <% end %>
