--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,7 +2,9 @@
  <% @questions.each do |question| %>
      <div class="A question">
      <h3><%= question.title %></h3>
-     <p><%= question.body %></p>
+     <p><%= truncate(question.body,length: 150) %></p>
+     Published <%= time_ago_in_words(question.created_at) %> ago
      <%= link_to "Read More" , question_path(question),:class => 'btn btn-default' %>
+     
      </div>
  <% end %>
