--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,9 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", '#' %></li>
+        
         <% if logged_in? %>
+        <li><%= link_to "Ask Question", new_question_path %></li>
           <li><%= link_to "Users", users_path %></li>
           <li><%= link_to "Users", '#' %></li>
           <li class="dropdown">
