--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,7 +1,9 @@
 <p><u>Comments</u></p>
  <% @question.comments.each do |comment| %>
      <div class="A comment">
-         <p><strong><%= comment.body %></strong> <%= link_to '[X]', [comment.question,comment], method: :delete, data: { confirm: 'Are you sure?'} %>
+         <p>
+          <strong><%= comment.body %></strong> <%= link_to '[X]', [comment.question,comment], method: :delete, data: { confirm: 'Are you sure?'} %>
          </p>
+         <p>Posted by <strong><%= link_to current_user.name, current_user%></strong> at <%= comment.user.created_at.strftime("%Y-%m-%d  %H:%M") %></p>
      </div>
  <%end%> 
