Fixed comments and add author to question and comment counter

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -6,6 +6,16 @@ body {
   line-height: 18px;
 }
 
+.commentStyle {
+margin-top: 5px;
+  // margin-bottom: 20px;
+  // padding: 5px 5px 5px 5px;
+  background-color: #C6D0DE;
+     border-radius: 5px;
+    border: 2px solid #C6D0DE;
+    padding: 10px; 
+}
+
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -36,7 +46,6 @@ div {
     margin-bottom: 10px;
   }
 }
-
 #notice {
   color: green;
 }
