--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,6 @@
 <h3><%= @question.title %></h3>
 <p><%= @question.body %></p>
+Published <%= time_ago_in_words(@question.created_at) %> ago by <%= link_to @question.user.name %>
 
 <%= render 'comments/comments' %>
 <%= render 'comments/form' %>
