--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -6,7 +6,7 @@
 
          </br>  
          </br> 
-         Posted by <strong><%= link_to comment.user.name %></strong> at <%= comment.user.created_at.strftime("%Y-%m-%d  %H:%M") %>
+         Posted by <strong><%= link_to comment.user.name, comment.user %></strong> at <%= comment.user.created_at.strftime("%Y-%m-%d  %H:%M") %>
          <%= link_to 'Delete', [comment.question,comment], method: :delete, data: { confirm: 'Are you sure?'} %>
         
      </div>
