--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -66,15 +66,16 @@ p {
 
 #logo {
   float: left;
+  vertical-align: middle;
   margin-right: 10px;
-  font-size: 1.7em;
-  color: white;
+  font-size: 2.1em;
+  color: #E2E2E2;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  padding-top: 15px;
   font-weight: bold;
   &:hover {
-    color: white;
+    color: #E2E2E2;
     text-decoration: none;
   }
 }
@@ -87,9 +88,9 @@ footer {
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
   a {
-    color: $gray;
+    color: #95B8C4;
     &:hover {
-      color: $gray-darker;
+      color: #EBF2F4;
     }
   }
   small {
