--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
 <h3><%= @question.title %></h3>
-<p><%= @question.body %></p>
-Published <%= time_ago_in_words(@question.created_at) %> ago by <%= link_to @question.user.name %>
+<div class="question"><p><%= @question.body %></p>
+Published <%= time_ago_in_words(@question.created_at) %> ago by <%= link_to @question.user.name, @question.user %>  </font>
 
 <% if current_user?(@question.user) %>
           
@@ -10,6 +10,6 @@ Published <%= time_ago_in_words(@question.created_at) %> ago by <%= link_to @que
                 data: {confirm: 'Are you sure ?'},
                 :class => 'btn btn-danger'%>
           <% end %>
-
+ </div>
 <%= render 'comments/comments' %>
 <%= render 'comments/form' %>
